removed rotating flame effect on srb

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/waterfall-sss-rsrm.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Waterfall/waterfall-sss-rsrm.cfg
@@ -301,7 +301,7 @@ EFFECTTEMPLATE
 			path = Waterfall/FX/fx-cylinder
 			positionOffset = 0,0,0.100000001
 			rotationOffset = -90,0,0
-			scaleOffset = 0.949999988,25,0.949999988
+			scaleOffset = 0.699999988,25,0.699999988
 			MATERIAL
 			{
 				transform = Cylinder
@@ -467,7 +467,7 @@ EFFECTTEMPLATE
 			floatCurve
 			{
 				key = 0 2 0 0
-				key = 1 1.82 0 0
+				key = 1 1.85 0 0
 			}
 		}
 		FLOATMODIFIER
@@ -520,13 +520,13 @@ EFFECTTEMPLATE
 		}
 		FLOATMODIFIER
 		{
-			floatName = _SpeedY
+			floatName = _SpeedX
 			controllerName = Thrust
 			transformName = Cylinder
 			useRandomness = False
 			randomnessController = RandomnessController
 			randomnessScale = 1
-			name = speedy
+			name = speedX
 			combinationType = REPLACE
 			floatCurve
 			{
