--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiter.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiter.cfg
@@ -96,7 +96,8 @@ PART
 INTERNAL
 	{
 		name = space_shuttle_system_cockpit
-		offset=0.01, 0.31, -6.05
+		offset= -0.005, 0.315, -5.85
+		scale = 0.96, 0.96, 1
 	}
 	
 MODULE
