--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiterBasicCabin.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiterBasicCabin.cfg
@@ -15,7 +15,7 @@ PART
 	node_stack_KU = 1.62176, 3.93059, -0.22783, 0, 1, 0, 1
 	node_stack_winch = 0, 4.39204, -1.07463, 0, -1, 0, 0
 	node_stack_Dock = 0, 4.36644, 0.68553, 0, -1, 0, 2
-	node_stack_fuselase = 0, 4.43363, 1.43459, 0, -1, 0, 2
+	//node_stack_fuselase = 0, 4.43363, 1.43459, 0, -1, 0, 2
 	node_stack_winch = 0, -7.19286, -1.27099, 0, -1, 0, 0
 	node_stack_OMSL = -1.47499, -9.17389, -1.42398, 0, -1, 0, 2
 	node_stack_OMSR = 1.47499, -9.17389, -1.42398, 0, -1, 0, 2
@@ -36,7 +36,7 @@ PART
 	cost = 5600
 	category = Pods
 	subcategory = 0
-	title = Shuttle Orbiter (Empty Cockpit)
+	title = Shuttle Orbiter
 	manufacturer = Boeing/Rockwell
 	description = Warranty void during re-entry.
 	mass = 16.132000445999999
@@ -96,7 +96,7 @@ PART
 INTERNAL
 	{
 		name = space_shuttle_system_cockpitEmpty
-		offset=0, 0.235, -5.922
+		offset= -0.005, 0.26, -5.91
 	}
 	
 MODULE
@@ -339,63 +339,6 @@ MODULE
 			editorActiveType = inactive
 		}
 	}
-
-MODULE
-	{
-		name = ModuleRCSFX
-		stagingEnabled = True
-		thrusterTransformName = RCSthruster2
-		thrusterPower = 1
-		resourceName = MonoPropellant
-		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = controlVernier
-		atmosphereCurve
-		{
-			key = 0 310
-			key = 1 100
-			key = 4 0.001
-		}
-	SSTU_FIELDDATA
-		{
-			name = thrustPercentage
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = realISP
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = ToggleToggles
-			fieldType = event
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = useThrottle
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = fullThrust
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	}
 	
 MODULE
 	{
@@ -451,7 +394,7 @@ MODULE
 	{
 		name = ModuleJettison
 		jettisonName = 11
-		bottomNodeName = fuselase
+		bottomNodeName = Tail
 		isFairing = false
 		jettisonedObjectMass = 0.1
 		jettisonForce = 1
@@ -462,7 +405,7 @@ MODULE
 	{
 		name = ModuleJettison
 		jettisonName = 22
-		bottomNodeName = fuselase
+		bottomNodeName = Tail
 		isFairing = false
 		jettisonedObjectMass = 0.1
 		jettisonForce = 1
@@ -473,7 +416,7 @@ MODULE
 	{
 		name = ModuleJettison
 		jettisonName = 33
-		bottomNodeName = fuselase
+		bottomNodeName = Tail
 		isFairing = false
 		jettisonedObjectMass = 0.1
 		jettisonForce = 1
@@ -484,7 +427,7 @@ MODULE
 	{
 		name = ModuleJettison
 		jettisonName = 44
-		bottomNodeName = fuselase
+		bottomNodeName = Tail
 		isFairing = false
 		jettisonedObjectMass = 0.1
 		jettisonForce = 1
@@ -495,38 +438,40 @@ MODULE
 	{
 		name = ModuleJettison
 		jettisonName = FUSELAGE_002
-		bottomNodeName = fuselase
+		bottomNodeName = Tail
 		isFairing = false
 		jettisonedObjectMass = 0.1
 		jettisonForce = 1
 		jettisonDirection = 0 0 1
 	}
-
 MODULE
 	{
 		name = TRReflection
 		shader = Reflective/Bumped Specular
 		colour = 0.4 0.4 0.4
 		interval = 1
-		meshes = WINDOWS2
+		meshes = Glass
 	}
-
+	
 MODULE
 	{
-		name = TRReflection
-		shader = Reflective/Bumped Specular
-		colour = 0.4 0.4 0.4
-		interval = 1
-		meshes = WINDOWS
+		name = ModuleAnimateGeneric
+		animationName = cabin_hatch
+		startEventGUIName = Open Cabin Hatch
+		endEventGUIName = Close Cabin Hatch
+		toggleActionName = Toggle  Cabinhatch
 	}
 
 MODULE
 	{
 		name = ModuleAnimateGeneric
-		animationName = OPEN_DOOR
-		startEventGUIName = Open Cargo Door
-		endEventGUIName = Close Cargo Door
-		toggleActionName = Toggle Cargobay
+		animationName = pb_doors
+		startEventGUIName = Open Payload Bay Doors
+		endEventGUIName = Close Payload Bay Doors
+		toggleActionName = Toggle Payloadbay
+		revClampDirection = false
+		revClampSpeed = true	
+		revClampPercent = true	
 	}
 
 MODULE
@@ -550,74 +495,14 @@ MODULE
 	
 MODULE
 	{
-		name = ModuleLight
-		lightName = X_1
-		useAnimationDim = True
-		lightBrightenSpeed = 9
-		lightDimSpeed = 9
-		animationName = X-1
-		resourceAmount = 0.09
-		useResources = true
-	}
-
-MODULE
-	{
-		name = ModuleLight
-		lightName = X_2
-		useAnimationDim = True
-		lightBrightenSpeed = 9
-		lightDimSpeed = 9
-		animationName = X-2
-		resourceAmount = 0.09
-		useResources = true
-	}
-
-MODULE
-	{
-		name = ModuleLight
-		lightName = Y_1
-		useAnimationDim = True
-		lightBrightenSpeed = 9
-		lightDimSpeed = 9
-		animationName = Y-1
-		resourceAmount = 0.09
-		useResources = true
-	}
-
-MODULE
-	{
-		name = ModuleLight
-		lightName = Y_2
-		useAnimationDim = True
-		lightBrightenSpeed = 9
-		lightDimSpeed = 9
-		animationName = Y-2
-		resourceAmount = 0.09
-		useResources = true
-		}
-
-MODULE
-	{
-		name = ModuleLight
-		lightName = Z_1
-		useAnimationDim = True
-		lightBrightenSpeed = 9
-		lightDimSpeed = 9
-		animationName = Z-1
-		resourceAmount = 0.09
-		useResources = true
-	}
-
-MODULE
-	{
-		name = ModuleLight
-		lightName = Z_2
-		useAnimationDim = True
-		lightBrightenSpeed = 9
-		lightDimSpeed = 9
-		animationName = Z-2
-		resourceAmount = 0.09
-		useResources = true
+		name = ModuleAnimateGeneric
+		animationName = pb_lights
+		startEventGUIName = Payload Bay Lights On
+		endEventGUIName = Payload Bay Lights Off
+		actionGUIName = Toggle Payloadbay lights
+		revClampDirection = false
+		revClampSpeed = true	
+		revClampPercent = true	
 	}
 
 MODULE
@@ -719,7 +604,7 @@ MODULE
 MODULE
 	{
 		name = ModuleAnimateGeneric
-		animationName = anim
+		animationName = ETdoors
 		startEventGUIName = Open ET Door
 		endEventGUIName = Close ET Door
 		actionGUIName = Toggle ET Door
@@ -793,18 +678,19 @@ MODULE
 		tempColliderOffset = -0.12
 	ANIMATION
 		{
-			name = OPEN_WHEEL
-			layer = 3
-			speed = 1
-		}
-	ANIMATION
-		{
 			name = WHEEL
 			layer = 3
 			speed = 1
 		}
 	}
 
+MODULE
+{
+      name = ModuleAnimateHeat
+      ThermalAnim = ShuttleHeatEmissive
+	  useTemp = true
+	  useSkinTemp = true
+}
 
 MODULE
 	{
