--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/ShuttleTextureSwitch.cfg
@@ -514,6 +514,13 @@
 			}
 			TEXTURE
 			{
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_EMPTY_NRM
+				isNormalMap = true
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
 				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/CargoBay/FUSELASE_ATLANTIS_OLD
 				transform = 113
 				transform = RIGHT_PLBD_EXT
@@ -571,6 +578,13 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_ATLANTIS
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_EMPTY_NRM
+				isNormalMap = true
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -635,6 +649,13 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_ENDEAVOUR
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_EMPTY_NRM
+				isNormalMap = true
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -774,6 +795,13 @@
 			}
 			TEXTURE
 			{
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_EMPTY_NRM
+				isNormalMap = true
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
 				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/CargoBay/FUSELASE2
 				transform = 113
 				transform = RIGHT_PLBD_EXT
@@ -831,6 +859,13 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_ATLANTIS
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_EMPTY_NRM
+				isNormalMap = true
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -895,6 +930,13 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_ENDEAVOUR
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_EMPTY_NRM
+				isNormalMap = true
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
@@ -1175,6 +1217,13 @@
 			}
 			TEXTURE
 			{
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_EMPTY_NRM
+				isNormalMap = true
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
 				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/CargoBay/FUSELASE2
 				transform = 113
 				transform = RIGHT_PLBD_EXT
@@ -1232,6 +1281,13 @@
 			TEXTURE
 			{
 				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_EMPTY
+				transform = FUSELAGE_001
+				transform = FRCS_MODULE
+			}
+			TEXTURE
+			{
+				texture = SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/Cabin/CABINE_EMPTY_NRM
+				isNormalMap = true
 				transform = FUSELAGE_001
 				transform = FRCS_MODULE
 			}
