non-ro config overhauls

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiter.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiter.cfg
@@ -392,10 +392,20 @@ MODULE
 	
 MODULE
 	{
+		name = JSIExternalCameraSelector
+		cameraContainer = ALCORExt_E_CamTransform
+		current = 1
+		rotateCamera = 0,0,0
+		cameraIDPrefix = ExtCam
+	}
+	
+MODULE
+	{
 		name = ModuleJettison
 		jettisonName = 11
 		bottomNodeName = Tail
-		isFairing = false
+		isFairing = False
+		isJettisoned = True
 		jettisonedObjectMass = 0.01
 		jettisonForce = 50
 		jettisonDirection = 0 1 0
@@ -406,7 +416,8 @@ MODULE
 		name = ModuleJettison
 		jettisonName = 22
 		bottomNodeName = Tail
-		isFairing = false
+		isFairing = False
+		isJettisoned = True
 		jettisonedObjectMass = 0.01
 		jettisonForce = 50
 		jettisonDirection = -1 0 0
@@ -417,7 +428,8 @@ MODULE
 		name = ModuleJettison
 		jettisonName = 33
 		bottomNodeName = Tail
-		isFairing = false
+		isFairing = False
+		isJettisoned = True
 		jettisonedObjectMass = 0.01
 		jettisonForce = 50
 		jettisonDirection = 1 0 0
@@ -428,7 +440,8 @@ MODULE
 		name = ModuleJettison
 		jettisonName = 44
 		bottomNodeName = Tail
-		isFairing = false
+		isFairing = False
+		isJettisoned = True
 		jettisonedObjectMass = 0.01
 		jettisonForce = 50
 		jettisonDirection = 0 1 0
@@ -439,7 +452,8 @@ MODULE
 		name = ModuleJettison
 		jettisonName = FUSELAGE_002
 		bottomNodeName = Tail
-		isFairing = false
+		isFairing = False
+		isJettisoned = True
 		jettisonedObjectMass = 0.01
 		jettisonForce = 50
 		jettisonDirection = 0 1 0
@@ -484,14 +498,6 @@ MODULE
 		nodeInnerAftID = CARGO
 	}
 
-MODULE
-	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = True
-		deflectionLiftCoeff = 5.0	
-		dragAtMaxAoA = 0.0
-		dragAtMinAoA = 0.0
-	}
 	
 MODULE
 	{
@@ -695,13 +701,13 @@ MODULE
 MODULE
 	{
 		name = ModuleLiftingSurface
-		useInternalDragModel = True
+		useInternalDragModel = False
 		deflectionLiftCoeff = 43.0
-		dragAtMaxAoA = 0.0
-		dragAtMinAoA = 0.0
+		dragAtMaxAoA = 0.75
+		dragAtMinAoA = 0.25
 	}
 	
-CoMOffset = 0.0, -0.5, 0.0
-CoLOffset = 0.0, -3.5, 2.0
+CoMOffset = 0.0, 1.0, 0.0
+CoLOffset = 0.0, -4.0, 2.0
 
 }
