--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -18,7 +18,8 @@
 	
 	//from the shuttle crew operations manual, section 4.8 CG Limitations
 	//calibrated around station X1090 with all the parts and engines, empty tanks and cargo bay
-	CoMOffset = 0.0, -3.0, 0.0
+	@CoMOffset = 0.0, -3.0, 0.0
+	!CoLOffset
 	
 	%fuelCrossFeed = true
 	
@@ -30,6 +31,16 @@
 	%emissiveConstant = 0.95		//matte black
 	
 	!MODULE[ModuleLiftingSurface]{}
+	
+	MODULE
+	{
+		name = ModuleLiftingSurface
+		useInternalDragModel = False
+		deflectionLiftCoeff = 20
+		dragAtMaxAoA = 0.0
+		dragAtMinAoA = 0.0
+	}
+	
 	//b2 is the total orbiter wingspan
 	//MAC is calculated from the total planform area of 367.15 m2
 	%MODULE[FARSpaceShuttleAerodynamicModel]
@@ -38,7 +49,7 @@
 		%MidChordSweep = 45
 		%b_2 = 23.79
 		%TaperRatio = 0.185
-		%rootMidChordOffsetFromOrig = 9.175, 1.7, 0
+		%rootMidChordOffsetFromOrig = 9.175, 1.9, 0
 		%massOverride = 0
 	}
 	
