more work on tailcone and rcs covers

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiter.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiter.cfg
@@ -22,7 +22,6 @@ PART
 	node_stack_SSMEC = 0, -10.53785, -1.05021, 0, -0.96755, -0.25269, 2
 	node_stack_SSMEL = -0.90764, -10.89398, 0.60645, 0, -0.96933, -0.24576, 2
 	node_stack_SSMER = 0.90764, -10.89398, 0.60645, 0, -0.96933, -0.24576, 2
-	node_stack_bottom = 0, -10.77527, 0.05423, 0, -0.96933, -0.24576, 1
 	node_stack_OMSL = -1.2934698, -10.764616, -1.5783561, 0.0, -1.0, 0.0, 1
 	node_stack_OMSR = 1.2934698, -10.764616, -1.5783561, 0.0, -1.0, 0.0, 1
 	node_stack_elevonL = -5.05141, -8.76502, 1.76576, 0, 1, 0, 1
@@ -105,6 +104,74 @@ MODULE
     {
     	name = RasterPropMonitorComputer
     }
+	
+MODULE
+{
+	name = ModuleB9PartSwitch
+	moduleID = startrackerSwitch
+	switcherDescription = Toggle Star Tracker doors
+	switcherDescriptionPlural = Toggle Star Tracker doors
+	affectDragCubes = false
+	uiGroupName = GeneralConfiguration
+	uiGroupDisplayName = General Configuration
+
+	SUBTYPE
+	{
+		name = enabled
+		transform = startracker
+	}
+
+	SUBTYPE
+	{
+		name = disabled
+	}
+}
+	
+MODULE
+{
+	name = ModuleB9PartSwitch
+	moduleID = rcscoverSwitch
+	switcherDescription = Toggle RCS Covers
+	switcherDescriptionPlural = Toggle RCS Covers
+	affectDragCubes = false
+	uiGroupName = GeneralConfiguration
+	uiGroupDisplayName = General Configuration
+
+	SUBTYPE
+	{
+		name = enabled
+		transform = rcscovers_nose
+		transform = rcscover_eng
+	}
+
+	SUBTYPE
+	{
+		name = disabled
+	}
+}
+	
+MODULE
+{
+	name = ModuleB9PartSwitch
+	moduleID = coneSwitch
+	switcherDescription = Toggle Aerodynamic Tailcone
+	switcherDescriptionPlural = Toggle Aerodynamic Tailcone
+	affectDragCubes = false
+	uiGroupName = GeneralConfiguration
+	uiGroupDisplayName = General Configuration
+
+	SUBTYPE
+	{
+		name = enabled
+		transform = TAILCONE
+		addedMass = 0.62
+	}
+
+	SUBTYPE
+	{
+		name = disabled
+	}
+}
 
 EFFECTS
 {
@@ -295,65 +362,7 @@ MODULE
 		cameraIDPrefix = ExtCam
 	}
 	
-MODULE
-	{
-		name = ModuleJettison
-		jettisonName = 11
-		bottomNodeName = Tail
-		isFairing = False
-		isJettisoned = True
-		jettisonedObjectMass = 0.01
-		jettisonForce = 50
-		jettisonDirection = 0 1 0
-	}
-	
-MODULE
-	{
-		name = ModuleJettison
-		jettisonName = 22
-		bottomNodeName = Tail
-		isFairing = False
-		isJettisoned = True
-		jettisonedObjectMass = 0.01
-		jettisonForce = 50
-		jettisonDirection = -1 0 0
-	}
-	
-MODULE
-	{
-		name = ModuleJettison
-		jettisonName = 33
-		bottomNodeName = Tail
-		isFairing = False
-		isJettisoned = True
-		jettisonedObjectMass = 0.01
-		jettisonForce = 50
-		jettisonDirection = 1 0 0
-	}
-	
-MODULE
-	{
-		name = ModuleJettison
-		jettisonName = 44
-		bottomNodeName = Tail
-		isFairing = False
-		isJettisoned = True
-		jettisonedObjectMass = 0.01
-		jettisonForce = 50
-		jettisonDirection = 0 1 0
-	}
-	
-MODULE
-	{
-		name = ModuleJettison
-		jettisonName = FUSELAGE_002
-		bottomNodeName = Tail
-		isFairing = False
-		isJettisoned = True
-		jettisonedObjectMass = 0.01
-		jettisonForce = 50
-		jettisonDirection = 0 1 0
-	}
+
 MODULE
 	{
 		name = TRReflection
