--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiterBasicCabin.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiterBasicCabin.cfg
@@ -36,7 +36,7 @@ PART
 	cost = 5600
 	category = Pods
 	subcategory = 0
-	title = Shuttle Orbiter
+	title = Shuttle Orbiter (Basic Cabin)
 	manufacturer = Boeing/Rockwell
 	description = Warranty void during re-entry.
 	mass = 16.132000445999999
