--- a/shuttle_system_parts_redone/unity/shuttle parts redone/PartTools.cfg
+++ b/shuttle_system_parts_redone/unity/shuttle parts redone/PartTools.cfg
@@ -1,1 +1,1 @@
-GameData = C:/Kerbal Space Program/GameData/SPACE_SHUTTLE_SYSTEM/Parts
+GameData = D:/Steam/steamapps/common/Kerbal Space Program/GameData/SPACE_SHUTTLE_SYSTEM/Parts
