--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleSSRBDecoupler.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleSSRBDecoupler.cfg
@@ -47,5 +47,28 @@ MODULE
 		isOmniDecoupler = false
 		explosiveNodeID = srf
 	}
+	
+MODULE
+{
+	name = ModuleB9PartSwitch
+	moduleID = decouplerLRSwitch
+	switcherDescription = Switch decoupler side L/R
+	switcherDescriptionPlural = Switch decoupler side L/R
+	affectDragCubes = false
+	uiGroupName = GeneralConfiguration
+	uiGroupDisplayName = General Configuration
+
+	SUBTYPE
+	{
+		name = Left
+		transform = SSRB_DECOUPLER_L
+	}
+
+	SUBTYPE
+	{
+		name = Right
+		transform = SSRB_DECOUPLER_R
+	}
+}
 
 }
