--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleFuel/ShuttleExtTank.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleFuel/ShuttleExtTank.cfg
@@ -14,6 +14,8 @@ MODEL
 	specPower = 500.1
 	node_attach = 0.0, 0.0, -4.05, 0.0, 0.0, 1.0, 0
 	node_stack_bottom = 0.0, -28.22339, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_srb_l = -6.3, -24.42339, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_srb_r = 6.3, -24.42339, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_carg = 0.0, -13.43116, -4.686612, 0.0, -1.0, 0.0, 2
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple	
