--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleSSRBDecoupler.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleSSRBDecoupler.cfg
@@ -12,8 +12,8 @@ MODEL
 	scale = 0.64
 	rescaleFactor = 1.0
 	specPower = 500.1
-	node_attach = 0.1, 0.0, 0.0, 1.0, 0.0, 0.0, 3, 1, 1
-	node_stack_top = -2.031127, -0.0, -0.0, 0.0, -1.0, 0.0, 3, 1, 1
+	node_stack_et = -2.049, -19.76954, 0.0, 0.0, 1.0, 0.0, 3
+	node_stack_top = -2.031127, -0.0, -0.0, 0.0, -1.0, 0.0, 3
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
 	sound_decoupler_fire = decouple
 	cost = 200
@@ -61,13 +61,13 @@ MODULE
 	SUBTYPE
 	{
 		name = Left
-		transform = SSRB_DECOUPLER_L
+		transform = left_struts
 	}
 
 	SUBTYPE
 	{
 		name = Right
-		transform = SSRB_DECOUPLER_R
+		transform = right_struts
 	}
 }
 
