fixed srb decoupler and cone

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleSSRBDecoupler.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleSSRBDecoupler.cfg
@@ -45,7 +45,7 @@ MODULE
 		name = ModuleDecouple
 		ejectionForce = 500
 		isOmniDecoupler = false
-		explosiveNodeID = srf
+		explosiveNodeID = et
 	}
 	
 MODULE
