--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleSSRBTop.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleSSRBTop.cfg
@@ -167,10 +167,10 @@ RESOURCE
 }
 
 
-//MODULE
-//{
-//	name = ModuleParachute
-//	invertCanopy = true
+MODULE
+{
+	name = ModuleParachute
+	invertCanopy = true
 	autoCutSpeed = 0.7
 	capName = CANOPY
 	canopyName = canopy
