fixed orbiter cfg

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiter.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiter.cfg
@@ -16,8 +16,8 @@ PART
 	node_stack_winch = 0, 4.39204, -1.07463, 0, -1, 0, 0
 	node_stack_Dock = 0, 4.36644, 0.68553, 0, -1, 0, 2
 	node_stack_winch = 0, -7.19286, -1.27099, 0, -1, 0, 0
-	//node_stack_OMSPodL = -1.47499, -9.17389, -1.42398, 0, -1, 0, 2
-	//node_stack_OMSPodR = 1.47499, -9.17389, -1.42398, 0, -1, 0, 2
+	node_stack_OMSPodL = -1.47499, -9.17389, -1.42398, 0, -1, 0, 2
+	node_stack_OMSPodR = 1.47499, -9.17389, -1.42398, 0, -1, 0, 2
 	node_stack_Tail = 0, -8.98275, -1.91099, 0, 0, -1, 1
 	node_stack_SSMEC = 0, -10.53785, -1.05021, 0, -0.96755, -0.25269, 2
 	node_stack_SSMEL = -0.90764, -10.89398, 0.60645, 0, -0.96933, -0.24576, 2
@@ -96,7 +96,7 @@ PART
 	}
 INTERNAL
 	{
-		name = space_shuttle_system_cockpit
+		name = space_shuttle_system_cockpitEmpty
 		offset= -0.005, 0.26, -5.91
 	}
 	
@@ -141,7 +141,7 @@ MODULE
 	{
 		name = enabled
 		transform = rcscovers_nose
-		transform = rcscover_eng
+		//transform = rcscover_eng
 	}
 
 	SUBTYPE
@@ -162,14 +162,14 @@ MODULE
 
 	SUBTYPE
 	{
+		name = disabled
+	}
+	
+	SUBTYPE
+	{
 		name = enabled
 		transform = TAILCONE
 		addedMass = 0.62
-	}
-
-	SUBTYPE
-	{
-		name = disabled
 	}
 }
 
@@ -243,11 +243,12 @@ RESOURCE
 		maxAmount = 2000
 	}
 
+//1350 for integrated oms version, 350 for standard orbiter part
 RESOURCE
 	{
 		name = MonoPropellant
-		amount = 1350
-		maxAmount = 1350
+		amount = 350
+		maxAmount = 350
 	}
 
 MODULE
