--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleSSRBBottomR.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleSSRBBottomR.cfg
@@ -40,6 +40,7 @@ MODEL
 	breakingForce = 5000
 	breakingTorque = 5000
 	maxTemp = 2700 
+	stagingIcon = SOLID_BOOSTER
 	fuelCrossFeed = False
 	tags = Shuttle
 
