--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleOMSPodL.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleEngines/ShuttleOMSPodL.cfg
@@ -37,6 +37,28 @@ MODEL
 	bulkheadProfiles = srf
 	tags = Shuttle
 
+MODULE
+{
+	name = ModuleB9PartSwitch
+	moduleID = rcscoverSwitch
+	switcherDescription = Toggle RCS Covers
+	switcherDescriptionPlural = Toggle RCS Covers
+	affectDragCubes = false
+	uiGroupName = GeneralConfiguration
+	uiGroupDisplayName = General Configuration
+
+	SUBTYPE
+	{
+		name = enabled
+		transform = rcscover_l
+	}
+
+	SUBTYPE
+	{
+		name = disabled
+	}
+}
+
 EFFECTS
 	{
 		control
@@ -177,61 +199,21 @@ RESOURCE
 		amount = 500
 		maxAmount = 500
 	}
-
+	
 MODULE
 	{
 		name = ModuleRCSFX
 		stagingEnabled = True
 		thrusterTransformName = RCSthruster
-		thrusterPower = 1
+		thrusterPower = 0.2
 		resourceName = MonoPropellant
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = control
-	atmosphereCurve
+		atmosphereCurve
 		{
 			key = 0 310
 			key = 1 100
 			key = 4 0.001
-		}
-	SSTU_FIELDDATA
-		{
-			name = thrustPercentage
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = realISP
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = ToggleToggles
-			fieldType = event
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = useThrottle
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = fullThrust
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
 		}
 	}
 
@@ -239,233 +221,17 @@ MODULE
 	{
 		name = ModuleRCSFX
 		stagingEnabled = True
-		thrusterTransformName = RCSthruster2
-		thrusterPower = 1
+		thrusterTransformName = RCSvernier
+		thrusterPower = 0.01
 		resourceName = MonoPropellant
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = control2
-	atmosphereCurve
+		runningEffectName = vernier
+		atmosphereCurve
 		{
 			key = 0 310
 			key = 1 100
 			key = 4 0.001
 		}
-	SSTU_FIELDDATA
-		{
-			name = thrustPercentage
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = realISP
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = ToggleToggles
-			fieldType = event
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = useThrottle
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = fullThrust
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	}
-
-MODULE
-	{
-		name = ModuleRCSFX
-		stagingEnabled = True
-		thrusterTransformName = RCSthruster4
-		thrusterPower = 1
-		resourceName = MonoPropellant
-		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = control3
-	atmosphereCurve
-		{
-			key = 0 310
-			key = 1 100
-			key = 4 0.001
-		}
-	SSTU_FIELDDATA
-		{
-			name = thrustPercentage
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = realISP
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = ToggleToggles
-			fieldType = event
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = useThrottle
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = fullThrust
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	}
-
-MODULE
-	{
-		name = ModuleRCSFX
-		stagingEnabled = True
-		thrusterTransformName = RCS3
-		thrusterPower = 1
-		resourceName = MonoPropellant
-		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = controlVernier
-	atmosphereCurve
-		{
-			key = 0 310
-			key = 1 100
-			key = 4 0.001
-		}
-	SSTU_FIELDDATA
-		{
-			name = thrustPercentage
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = realISP
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = ToggleToggles
-			fieldType = event
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = useThrottle
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = fullThrust
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	}
-
-MODULE
-	{
-		name = ModuleRCSFX
-		stagingEnabled = True
-		thrusterTransformName = RCS5
-		thrusterPower = 1
-		resourceName = MonoPropellant
-		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = controlVernier2
-	atmosphereCurve
-		{
-			key = 0 310
-			key = 1 100
-			key = 4 0.001
-		}
-	SSTU_FIELDDATA
-		{
-			name = thrustPercentage
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = realISP
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = ToggleToggles
-			fieldType = event
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = useThrottle
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	SSTU_FIELDDATA
-		{
-			name = fullThrust
-			fieldType = field
-			updateType = once
-			flightActiveType = inactive
-			editorActiveType = inactive
-		}
-	}
-	
-MODULE
-	{
-		name = SSTUFieldManipulator
 	}
 
 }
