fuel flow priority

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiter.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiter.cfg
@@ -252,6 +252,12 @@ RESOURCE
 	}
 
 MODULE
+{
+	name = TankPriorityModule
+	Priority = 0
+}
+
+MODULE
 	{
 		name = ModuleReactionWheel
 		PitchTorque = 100
