--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleFuel/ShuttleExtTank.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/ShuttleFuel/ShuttleExtTank.cfg
@@ -54,6 +54,12 @@ RESOURCE
 		amount = 20862.15
 		maxAmount = 20862.15
 	}
+	
+MODULE
+{
+	name = TankPriorityModule
+	Priority = 50
+}
 
 MODULE
 	{
