oms pods redone and rcs configs fixed

--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/OMSPod.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/OMSPod.cfg
@@ -79,31 +79,16 @@
 		}
 	}
 
-	@MODULE[ModuleRCS*]:HAS[#thrusterTransformName[RCS5]]
-	{
-		%engineID = vernier
-		@thrusterPower = 0.11
-
-		@enableRoll = false
-		@enableYaw = true
-		@enablePitch = false
-	}
-	@MODULE[ModuleRCS*]:HAS[#thrusterTransformName[RCS3]]
+	@MODULE[ModuleRCS*]:HAS[#thrusterTransformName[RCSvernier]]
 	{
 		%engineID = vernier
 		@thrusterPower = 0.11
 	}
-	@MODULE[ModuleRCS*]:HAS[~engineID[vernier]]
+	@MODULE[ModuleRCS*]:HAS[~thrusterTransformName[RCSvernier]]
 	{
 		%engineID = primary
 		@thrusterPower = 3.87
 	}
+	
 }
 
-@PART[RCS_L|RCS_R|ShuttleOMSPodL|ShuttleOMSPodR]
-{
-	@MODULE[ModuleRCS*],* 
-	{
-		!SSTU_FIELDDATA[*],* {}
-	}
-}
