--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiterBasicCabin.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleOrbiterBasicCabin.cfg
@@ -22,8 +22,8 @@ PART
 	node_stack_SSMEC = 0, -10.53785, -1.05021, 0, -0.96755, -0.25269, 2
 	node_stack_SSMEL = -0.90764, -10.89398, 0.60645, 0, -0.96933, -0.24576, 2
 	node_stack_SSMER = 0.90764, -10.89398, 0.60645, 0, -0.96933, -0.24576, 2
-	node_stack_OMSL = -1.2934698, -10.764616, -1.5783561, 0.0, -1.0, 0.0, 1
-	node_stack_OMSR = 1.2934698, -10.764616, -1.5783561, 0.0, -1.0, 0.0, 1
+	//node_stack_OMSL = -1.2934698, -10.764616, -1.5783561, 0.0, -1.0, 0.0, 1
+	//node_stack_OMSR = 1.2934698, -10.764616, -1.5783561, 0.0, -1.0, 0.0, 1
 	node_stack_elevonL = -5.05141, -8.76502, 1.76576, 0, 1, 0, 1
 	node_stack_elevonR = 5.05141, -8.76502, 1.76576, 0, 1, 0, 1
 	node_stack_bodyflap = 0, -11.10081, 1.83105, 0, -1, 0, 1
@@ -250,6 +250,12 @@ RESOURCE
 		amount = 350
 		maxAmount = 350
 	}
+	
+MODULE
+{
+	name = TankPriorityModule
+	Priority = 0
+}
 
 MODULE
 	{
@@ -273,7 +279,7 @@ MODULE
 MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = False
+		stagingEnabled = True
 		thrusterTransformName = RCSthruster
 		thrusterPower = 0.2
 		resourceName = MonoPropellant
@@ -289,8 +295,8 @@ MODULE
 
 MODULE
 	{
-		name = ModuleRCSFX
-		stagingEnabled = False
+		name = True
+		stagingEnabled = True
 		thrusterTransformName = RCSvernier
 		thrusterPower = 0.01
 		resourceName = MonoPropellant
