--- a/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
+++ b/GameData/RealismOverhaul/RO_SuggestedMods/SpaceShuttleSystem/Fuselage.cfg
@@ -104,12 +104,12 @@
 		}
 	}
 
-	@MODULE[ModuleRCS*]:HAS[#thrusterTransformName[RCSthruster2]]
+	@MODULE[ModuleRCS*]:HAS[#thrusterTransformName[RCSvernier]]
 	{
 		%engineID = vernier
 		@thrusterPower = 0.11
 	}
-	@MODULE[ModuleRCS*]:HAS[~thrusterTransformName[RCSthruster2]]
+	@MODULE[ModuleRCS*]:HAS[~thrusterTransformName[RCSvernier]]
 	{
 		%engineID = primary
 		@thrusterPower = 3.87
