cargo emissive, ldg door animations fixed, rudder retextured

--- a/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleTailControl.cfg
+++ b/GameData/SPACE_SHUTTLE_SYSTEM/Parts/Shuttle/ShuttleTailControl.cfg
@@ -36,6 +36,13 @@ MODEL
 	fuelCrossFeed = True
 	tags = Shuttle
 
+MODULE
+{
+      name = ModuleAnimateHeat
+      ThermalAnim = ShuttleHeatEmissive
+	  useTemp = true
+	  useSkinTemp = true
+}
 
 MODULE
 	{
@@ -48,7 +55,7 @@ MODULE
 		ctrlSurfaceArea = 0.4
 		actuatorSpeed = 70
 		transformName = rudderPanelL
-		partDeployInvert = True
+		partDeployInvert = False
 		ignoreRoll = True
 		ignorePitch = True
 	}
@@ -64,6 +71,7 @@ MODULE
 		ctrlSurfaceArea = 0.4
 		actuatorSpeed = 70
 		transformName = rudderPanelR
+		partDeployInvert = True
 		ignoreRoll = True
 		ignorePitch = True
 	}
